Making changes to "Area of Interest" as image link no longer worked.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@
 								</header>
 								<div class="features">
 									<article>
-										<span class="icon solid fa-map-location-dot"></span> 
+										<!--<span class="icon solid fa-map-location-dot"></span>-->
+										<span class="icon solid">
+											<img src="images/map-location-dot-solid.svg" alt="Location Icon" width="65" height="65", style="margin-top: 65px;">
+										</span>	 
+										</span> 
 										<div class="content">
 											<h3>Geospatial Intelligence</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
