Correcting Icon issues in areas of interest section

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 									<article>
 										<!--<span class="icon solid fa-map-location-dot"></span>-->
 										<span class="icon solid">
-											<img src="images/map-location-dot-solid.svg" alt="Location Icon" width="65" height="65", style="margin-top: 65px;">
+											<img src="images/map-location-dot-solid.svg" alt="Location Icon" width="60" height="60", style="margin-top: 65px;">
 										</span>	 
 										</span> 
 										<div class="content">
@@ -92,7 +92,10 @@
 										</div>
 									</article>
 									<article>
-										<span class="icon solid fa-magnifying-glass-chart"></span>
+										<!--<span class="icon solid fa-magnifying-glass-chart"></span>-->
+										<span class="icon solid">
+											<img src="images/magnifying-glass-chart-solid.svg" alt="Visualization Icon" width="60" height="60", style="margin-top: 77px;">
+										</span>
 										<div class="content">
 											<h3>Data <br> Visualization</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
