--- a/index.html
+++ b/index.html
@@ -81,21 +81,20 @@
 								</header>
 								<div class="features">
 									<article>
-										<!--<span class="icon solid fa-map-location-dot"></span>-->
-										<span class="icon solid">
+										<span class="icon solid fa-paper-plane"></span>
+										<!--<span class="icon solid">
 											<img src="images/map-location-dot-solid.svg" alt="Location Icon" width="60" height="60", style="margin-top: 65px;">
-										</span>	 
-										</span> 
+										</span>-->	  
 										<div class="content">
 											<h3>Geospatial Intelligence</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 										</div>
 									</article>
 									<article>
-										<!--<span class="icon solid fa-magnifying-glass-chart"></span>-->
-										<span class="icon solid">
+										<span class="icon brands fa-instagram"></span>
+										<!--<span class="icon solid">
 											<img src="images/magnifying-glass-chart-solid.svg" alt="Visualization Icon" width="60" height="60", style="margin-top: 77px;">
-										</span>
+										</span>-->
 										<div class="content">
 											<h3>Data <br> Visualization</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
