--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 									<article>
 										<a class="image"><img src="images/southkore_animation.gif" alt="" /></a>
 										<h3>MINING PATTERNS AND INSIGHTS FROM AIS DATA 1 - Point Pattern Analysis</h3>
-										<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+										<p>to be updated, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 										<ul class="actions">
 											<li><a href="AIS_Data_Analysis-_point.html" class="button">More</a></li>
 										</ul>
