--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 						<div class="inner">
 							<section>
 								<h2>Get in touch</h2>
-								<form method="post" action="#">
+								<form method="POST" action="https://formspree.io/f/xldbzjkw">
 									<div class="fields">
 										<div class="field half">
 											<input type="text" name="name" id="name" placeholder="Name" />
